--- a/NEURODASH/views/unirse-sala/salasDispo.html
+++ b/NEURODASH/views/unirse-sala/salasDispo.html
@@ -193,9 +193,6 @@
                 </div>
             </div>
         </div>   
-        
-        
-        
     </div>
 
     <!-- alets tostadas sys -->
@@ -213,6 +210,45 @@
             </div>
         </div>
     </div>
+
+    <!-- Button trigger modal -->
+<!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+    Launch demo modal
+  </button> -->
+  
+  <!-- Modal aviso de perteneciente a sala -->
+  <div class="modal fade" id="modalMiembroSala" tabindex="-1" aria-labelledby="modalMiembroSala" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content modal-nuzit-2">
+          <!-- <div class="modal-header"> -->
+              <!-- header -->
+          <!-- </div> -->
+          <div class="modal-body">
+              <div class="delete-perfli">
+                    <div class="img-modal">
+                        <img src="../../assets/img/iconos/dash-preguntado.png" alt="" class="center-element-x">
+                    </div>
+                    <p class="tuto-text2 text-center">Estas en sala de espera, ¿quieres seguir o abandonar la sala?</p>
+                    <div class="btns-modal-personal">
+                        <button class="shadow__btn red-btn" id="btnSalirSla">
+                            ABANDONAR
+                        </button>
+                        <button class="shadow__btn pulpura-btn" id="btnSalirSla">
+                            SEGUIR
+                        </button>
+                    </div>
+              
+              </div>
+              
+          </div>
+          <div class="modal-footer modal-nuzit-footer-2">
+              <div class="col-12 d-flex justify-content-center">
+
+              </div>
+          </div>
+      </div>
+    </div>
+  </div>
 
 
 
