--- a/NEURODASH/views/forms/validationPassword.html
+++ b/NEURODASH/views/forms/validationPassword.html
@@ -17,7 +17,7 @@
             <div class="col-4"></div>
             <div class="col-md-12 right-box">
                 <div class="row align-items-center">
-                    <form action="../../processes/register/registrar.php" method="post" class="registrar-login">
+                    <form action="../../processes/user/updatePassword.php" method="post" class="registrar-login update-contra">
                         <div class="header-text mb-4">
                             <h2 class="text-center">Contraseña</h2>
                         </div>
@@ -41,7 +41,7 @@
                         </div>
 
                         <div class="input-group mb-3">
-                            <a href="#" class="btn btn-form btn-lg w-100" id="confirmSave">Confirmar</a>
+                            <button type="submit" class="btn btn-form btn-lg w-100" id="confirmSave">Confirmar</a>
                             <!-- <button class="btn btn-form btn-lg btn-primary w-100 fs-6">Confirmar</a> -->
                         </div>
                     </form>
@@ -54,6 +54,21 @@
     </div>
 
 
+    <div class="toast-container position-fixed bottom-0 start-0 p-3">
+        <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-header">
+                <!-- <img src="..." class="rounded me-2" alt="..."> -->
+                <i class="fa-solid fa-triangle-exclamation fa-xl fa-shake m-2"></i>
+                <strong class="me-auto title-toast"> IMPORTANTE</strong>
+                <!-- <small>11 mins ago</small> -->
+                <!-- <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button> -->
+            </div>
+            <div class="toast-body">
+                
+            </div>
+        </div>
+    </div>
+
 
 
     <div class="loader-default">
@@ -64,14 +79,13 @@
     </div>
 
 
-
     <script src="../../lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+
     <script type="module" src="../../assets/js/main.js"></script>
-    <script src="../../assets/js/page/alertPassword.js"></script>
+
+    
+    <!-- <script src="../../assets/js/page/alertPassword.js"></script> -->
     <script src="../../assets/js/global/visibilidadPasword.js"></script>
-
-
-   
 
 </body>
 </html>
