--- a/NEURODASH/views/creacion_sala/creaando.html
+++ b/NEURODASH/views/creacion_sala/creaando.html
@@ -13,8 +13,16 @@
 
 
 </head>
-<body class="backgound-crearSalas d-flex justify-content-center align-items-center">
-    <div class="container-fluid">
+<body class="backgound-crearSalas ">
+
+    <div class="contenedor-loader" id="loadingScreen">
+        <div class="loading-screen" id="loadingScreen">
+            <div class="loading-circle">Loading...</div>
+            <span></span>
+        </div>
+    </div>
+
+    <div class="container-fluid mt-5">
         <div class="col-12 d-flex justify-content-center align-items-center">
             <div class="cardSa">
                 <div class="col-12 d-flex justify-content-center align-items-center">
