--- a/NEURODASH/views/topi-memori/topiMemori.html
+++ b/NEURODASH/views/topi-memori/topiMemori.html
@@ -10,7 +10,17 @@
     <link rel="stylesheet" href="../../lib/fontawesome/css/all.css">
 
   </head>
-<body class="backgound-topi" style="height: 100vh;">
+
+  
+  <body class="backgound-topi" style="height: 100vh;">
+
+  <div class="contenedor-loader" id="loadingScreen">
+    <div class="loading-screen" id="loadingScreen">
+        <div class="loading-circle">Loading...</div>
+        <span></span>
+    </div>
+  </div>
+
   <div class="container-fluid estilo">
     <div class="row">
       <div class="col-6 d-flex justify-content-start">
