--- a/NEURODASH/assets/css/pages/cartas.css
+++ b/NEURODASH/assets/css/pages/cartas.css
@@ -1,7 +1,5 @@
-
 .sectionOne{
     background-color: rgba(255, 255, 255, 0.2);
-    padding: 0 30px 30px;
     border-radius: 8px;
 }
 
@@ -31,11 +29,147 @@
     border: 1px solid white;
     height: 100px;
     border-radius: 8px;
-    padding: 20px 20px;
+    padding: 10px;
     box-sizing: border-box;
 }
 
 .cart{
     display: none;
 }
+.contenedor-loader{
+    background: rgb(0, 0, 0);
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
+
+.hidden {
+    display: none;
+}
+
+.devolver-home{
+    width: 70px;
+    height: 70px;
+}
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 5px;
+    max-width: 450px;
+    justify-items: center;
+}
+.container-cartas {
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    justify-content: center;
+    align-items: center;
+}
+.container-estadistica-2{
+    display: flex;
+    flex-direction: row;
+    justify-items: center;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    
+}
+@media only screen and (max-width: 428px) and (max-height: 926px) {
+    .container-cartas{
+        overflow-y: scroll;
+        padding: 15px;
+    }
+    .devolver-home{
+        width: 70px;
+        height: 70px;
+    }
+}
+@media only screen and (max-width: 320px) and (max-height: 568px) {
+    .container-cartas{
+        overflow-y: scroll;
+        padding: 25px;
+    }
+    .devolver-home{
+        width: 70px;
+        height: 70px;
+    }
+}
+
+.loading-circle {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 70px;
+    height: 70px;
+    background: transparent;
+    border: 3px solid #3c3c3c;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 70px;
+    font-family: sans-serif;
+    font-size: 12px;
+    color: #00eaff;
+    text-transform: uppercase;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+  }
+  
+  .loading-circle:before {
+    content: "";
+    position: absolute;
+    top: -3px;
+    left: -3px;
+    width: 110%;
+    height: 110%;
+    border: 3px solid transparent;
+    border-top: 3px solid #00eaff;
+    border-right: 3px solid #00eaff;
+    border-radius: 50%;
+    animation: animateC 2s linear infinite;
+  }
+  
+  .loading-circle span {
+    display: block;
+    position: absolute;
+    top: calc(50% - 2px);
+    left: 50%;
+    width: 50%;
+    height: 4px;
+    background: transparent;
+    transform-origin: left;
+    animation: animate 2s linear infinite;
+  }
+  
+  .loading-circle span:before {
+    content: "";
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    background: #00eaff;
+    top: -6px;
+    right: -8px;
+    box-shadow: 0 0 20px #00eaff;
+  }
+  
+  @keyframes animateC {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  
+  @keyframes animate {
+    0% {
+      transform: rotate(45deg);
+    }
+    100% {
+      transform: rotate(405deg);
+    }
+  }
+  
