--- a/NEURODASH/views/juego/pasaPalabras/pasaPalabras.html
+++ b/NEURODASH/views/juego/pasaPalabras/pasaPalabras.html
@@ -12,6 +12,19 @@
 </head>
 
 <body class="backgound-cuatro">
+
+    
+    <div class="contenedor-loader" id="loadingScreen">
+        <div class="loading-screen" id="loadingScreen">
+            <div class="loading-circle">Loading...</div>
+            <span></span>
+        </div>
+    </div>
+
+    <a href="../../home.html" class="col d-flex justify-content-start ms-4">
+        <img src="../../../assets/img/iconos/home.png" alt="flecha-develover" class="devolver-home">
+    </a>
+    
     <div class="container-fluid aling-item-centerN min-vh-100">
         <section id="pantalla-inicial" class="fondo-section aling-item-centerN flex-column p-5 w-100">
             <h1 class="mb-4 letra">PASAPALARAS</h1>
