--- a/NEURODASH/views/config/configStart.html
+++ b/NEURODASH/views/config/configStart.html
@@ -97,13 +97,13 @@
                             <div class="row ">
                                 <div class="edit-name-perfil">
                                     <div class="avatar-edit">
-                                        <img src="../../assets/img/iconos/helmet.jpg" alt="">
+                                        <img src="../../assets/img/iconos/helmet.jpg" alt="" class="avatat-user">
                                         <i class="edit fa-solid fa-user-pen" id="abrir-modal"></i>
                                     </div>
                                     <div class="input-container">
-                                        <input placeholder="name user" type="text" />
+                                        <input placeholder="name user" type="text" / class="user-name-config">
                                     </div>
-                                    <button class="shadow__btn font-4 size-text-1">
+                                    <button class="shadow__btn font-4 size-text-1 confi-cambios">
                                         Guardar
                                     </button>
                                 </div>
@@ -180,9 +180,8 @@
             <h2>Selecciona tu Avatar</h2>
             
             <!-- menú de avatares -->
-            <div class="avatar-menu modal-sm">
-                
-                <img src="../../assets/img/avatar/avatar1.jpg" alt="Avatar 1" class="avatar-option">
+            <div class="avatar-menu modal-sm list-avatars">
+                <!-- <img src="../../assets/img/avatar/avatar1.jpg" alt="Avatar 1" class="avatar-option">
                 <img src="../../assets/img/avatar/avatar2.jpg" alt="Avatar 2" class="avatar-option">
                 <img src="../../assets/img/avatar/avatar3.jpg" alt="Avatar 3" class="avatar-option">
                 <img src="../../assets/img/avatar/avatar4.jpg" alt="Avatar 4" class="avatar-option">
@@ -198,7 +197,7 @@
                 <img src="../../assets/img/avatar/avatar14.jpg" alt="Avatar 14" class="avatar-option">
                 <img src="../../assets/img/avatar/avatar15.jpg" alt="Avatar 15" class="avatar-option">
                 <img src="../../assets/img/avatar/avatar16.jpg" alt="Avatar 16" class="avatar-option">
-                <img src="../../assets/img/avatar/avatar17.jpg" alt="Avatar 17" class="avatar-option">
+                <img src="../../assets/img/avatar/avatar17.jpg" alt="Avatar 17" class="avatar-option"> -->
             </div>
         </div>
     </div>
@@ -207,8 +206,5 @@
     <!-- <script src="assets/js/sound/sonido.js"></script> -->
     <script src="../../lib/bootstrap/js/bootstrap.bundle.js"></script>
     <script src="../../lib/bootstrap/js/bootstrap.js"></script>
-
-    <!--script modal profile -->
-    <script src="../../assets/js/page/profile.js"></script>
 </body>
 </html>
