--- a/NEURODASH/assets/css/pages/profile.css
+++ b/NEURODASH/assets/css/pages/profile.css
@@ -108,8 +108,9 @@
 }
 
 .avatar-option.active-scale {
+    border: 4px solid #1eff00 !important;
     transform: scale(1.2);
-    box-shadow: 0 4px 15px #00CFFF;
+    box-shadow: 0 4px 30px #1bff54;
 }
 
 @media only screen and (max-width: 769px){
