--- a/NEURODASH/views/creacion_sala/creaando.html
+++ b/NEURODASH/views/creacion_sala/creaando.html
@@ -10,8 +10,6 @@
     <link rel="stylesheet" href="../../lib/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="../../lib/fontawesome/css/all.css">
 
-
-
 </head>
 <body class="backgound-crearSalas d-flex justify-content-center align-items-center">
     <div class="container-fluid">
@@ -41,7 +39,7 @@
                             <div class="text-center mt-2"><h1 class="fontSalas3">MODO DE JUEGO</h1></div>
                             <!-- <div class="mini d-flex justify-content-center align-items-center"> -->
                                 <div class="radio-groupS flex-column">
-                                    <input type="radio" id="terms" name="options" value="terms">
+                                    <input  type="radio" id="terms" name="options" value="terms">
                                     <label for="terms"><i class="fa-solid fa-a"></i>Terminos</label>
                                 
                                     <input type="radio" id="numbers" name="options" value="numbers">
@@ -56,7 +54,8 @@
                     <div class="col-6 d-flex justify-content-center align-items-center">
                         <div class="cardMdjuego d-flex justify-content-center align-items-center flex-column">
                             <img src="../../assets/img/avatars/avatar1.jpg" alt="" class="ImgGran">
-                            <a href="crearsala2.html" class="create-room-btn mt-2 text-center">Crear sala</a>
+                            <a href="#" class="create-room-btn mt-2 text-center disabled-input" disabled>Crear sala</a>
+                            <!-- crearsala2.html -->
                             <!-- <button class="create-room-btn mt-2">Crear Sala</button> -->
 
                         </div>
@@ -88,8 +87,8 @@
                     </div>
                 </div>
 
-                <div class="col-12 d-flex justify-content-center align-items-center">
-                    <div class="col-6 d-flex justify-content-center align-items-center">
+                <div class="col-12 d-flex justify-content-center align-items-center">radios_dificultad
+                    <div class="col-6 d-flex justify-content-center align-items-center ">
                         <div class="card-group2">
                             <input type="radio" id="facil" name="dificultad" value="facil">
                             <label for="facil" class="cardfipe2">
@@ -214,7 +213,18 @@
     
     </div>
 
+    <div class="loader-default">
+        <div class="loader-circle-9">
+            Loading
+            <span></span>
+        </div>
+    </div>
+  
+
+    <script src="../../lib/bootstrap/js/bootstrap.bundle.js"></script>
     <script src="../../lib/bootstrap/js/bootstrap.js"></script>
-    <script src="../../assets/js/page/creandoSala.js"></script>
+
+    <script type="module" src="../../assets/js/main.js"></script>
+    <!-- <script src="../../assets/js/page/creandoSala.js"></script> -->
 </body>
 </html>
