--- a/NEURODASH/views/home.html
+++ b/NEURODASH/views/home.html
@@ -28,12 +28,12 @@
         <!-- Información de usuario -->
         <div class="dropdown usuario mx-lg-5">
           <button type="button" class="btn fondo-btn btn-nav" data-bs-toggle="dropdown" aria-expanded="false" aria-label="Menú de usuario">
-            <img class="icon-nav" src="../assets/img/iconos-desarrollo/icono-user.svg" alt="Icono de usuario" />
-            <span class="name_user">Yisus</span>
+            <img class="icon-nav avatar-user" src="../assets/img/iconos-desarrollo/icono-user.svg" alt="Icono de usuario" />
+            <span class="m-2 name_user">---</span>
           </button>
           <ul class="dropdown-menu mt-3 bg-dark menu-user">
             <li class="m-2 p-2">
-              <div class="row aling-item-centerN">
+              <!-- <div class="row aling-item-centerN">
                 <div class="text-center col-7 menu me-2 ">
                   <img class="icon-home2" src="../assets/img/iconos-desarrollo/icono-user.svg" alt="User" />
                   <span class="text-white">Yisus</span>
@@ -41,21 +41,21 @@
                 <div class="col-4 menu text-center" data-bs-toggle="modal" data-bs-target="#modalBonos">
                   <img class="icon-home3" src="../assets/img/iconos-desarrollo/img-bonos.png" alt="Bonos" />
                 </div>
-              </div>
+              </div> -->
             </li>
             <li class="m-2">
               <div class="info">
-                <img class="icon-liga" src="../assets/img/iconos-desarrollo/icono-rango.png" alt="Liga" />
-                <label class="text-white col-form-label">Liga: Oro</label>
+                <img class="icon-liga avatar-user" src="../assets/img/iconos-desarrollo/icono-rango.png" alt="Liga" />
+                <label class="text-white col-form-label name_user"></label>
               </div>
             </li>
-            <li class="m-2 menu p-2">
+            <!-- <li class="m-2 menu p-2">
               <span class="text-white">Exp:</span>
               <div class="progress" role="progressbar" aria-label="Barra de progreso" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
                 <div class="progress-bar" style="width: 75%">1500/2000</div>
               </div>
-            </li>
-            <li class="m-2">
+            </li> -->
+            <!-- <li class="m-2">
               <div class="row aling-item-centerN">
                 <div class="col-9">
                   <label class="text-white col-form-label">500 Exp y llegarás al Rango Cristal</label>
@@ -64,10 +64,10 @@
                   <img class="icon-home" src="../assets/img/iconos-desarrollo/icono-rango.png" alt="Rango" />
                 </div>
               </div>
-            </li>
+            </li> -->
             <li class="text-center">
               <div class="info-sesion">
-                <a href="../model/public/cerrarSession.php" class="btn fondo-btn2">Cerrar Sesión</a>
+                <a href="../model/public/cerrarSession.php" class="btn fondo-btn2 m-2">Cerrar Sesión</a>
               </div>
             </li>
           </ul>
