--- a/NEURODASH/assets/css/pages/entrenamiento.css
+++ b/NEURODASH/assets/css/pages/entrenamiento.css
@@ -23,9 +23,9 @@
     filter:drop-shadow(0 0 10px rgba(0, 0, 0, 0.671));
     }
 
-    .logito-podio2{
+    /* .logito-podio2{
       animation: slide-right-left 1.5s infinite ease-in-out alternate;      
-    }
+    } */
 
     @keyframes slide-right-left {
       0% {
@@ -199,7 +199,7 @@
 }
 
 /* rondas  */
-.clock-container2,
+/* .clock-container2,
 .clock-container {
   display: flex;
   flex-direction: column;
@@ -211,12 +211,12 @@
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5);
   box-shadow: 0 0 21px rgb(22, 18, 18);
 
-}
+} */
 
-.clock-container{
+/* .clock-container{
   width: 250px;
   height: 250px;
-}
+} */
 
 .clock-container2{
   width: 180px;
@@ -224,19 +224,19 @@
   margin-top: 80px;
 }
 
-.clock-circle2,
+/* .clock-circle2,
 .clock-circle {
   background-color: #3d3d3d;
   border-radius: 50%;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.6);
   position: absolute;
   top: -70px; 
-}
+} */
 
-.clock-circle{
+/* .clock-circle{
   width: 250px;
   height: 200px;
-}
+} */
 
 .clock-circle2{
   width: 180px;
@@ -249,22 +249,22 @@
   border-radius: 50%;
   object-fit: cover; 
 }
-
+/* 
 .digital-clock2,
 .digital-clock {
   color: white;
   background-color: #2a2a2a;
   border-radius: 10px;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
-}
+} */
 
-.digital-clock{
+/* .digital-clock{
   margin-top: 120px;
   padding: 10px 20px;
   font-size: 2rem;
 
-}
-
+} */
+/* 
 .digital-clock2{
   margin-top: 55px;
   padding-left: 2px;
@@ -272,8 +272,8 @@
   font-size: 1.5rem;
 
 
-}
-
+} */
+/* 
 .digital-clock2 span,
 .digital-clock span {
   font-weight: bold;
@@ -293,7 +293,7 @@
 .digital-clock2 .seconds,
 .digital-clock .seconds {
   color: #4caf50;
-}
+} */
 
 
 /* From Uiverse.io by youngjid */ 
@@ -521,41 +521,41 @@
 }
 
 .clasifi,
-.clasifi2{
+/* .clasifi2{
   display: flex;
   justify-content: center;
   color: #000;
   font-weight: 300;
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  border: 1px solid #000;
-  border-radius: 12px;
+  border: 3px solid #b21be4;
+    border-radius: 12px;
 }
 .clasifi2{
   margin-top: 40px;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   width: 60%;
 }
 
 .clasifi2 span,
 .clasifi span{
   font-size: 25px;
-}
+} */
 
-.card-clasi {
+
+/* .card-clasi {
   background: linear-gradient(-45deg, #161616 0%, #000000 100%);
   color: #81818144;
   padding: 14px;
-  /* gap: 10px; */
   cursor: pointer;
   width: 40%;
   border-radius: 15px;
+  border: 3px solid #c765e7;
+} */
 
-}
-
-.card-clasi:hover{
+/* .card-clasi:hover{
   transition: all 0.2s cubic-bezier(0.175, 0.285, 0.82, 1.275);
-  box-shadow: 0px 0px 33px 0px hsl(217, 25%, 94%);
-}
+  box-shadow: 0px 0px 33px 0px hsl(305, 59%, 51%);
+} */
 
 .overlap-img {
   position: absolute;
@@ -827,7 +827,6 @@
 
   .logito-podio2{
     width: 50%;
-    animation: slide-right-left 1.5s infinite ease-in-out alternate;
   } 
 
 
@@ -864,10 +863,11 @@
 
   .nombre-Jugador{
     font-size: 1.5rem;
-  }
+    font-family: 'Jersey';  }
 
   .punText{
     font-size: 1.2rem;
+    font-family: 'Jersey';
   }
  
 
@@ -992,25 +992,25 @@ display: none;
   display: none;
 }
 
-.clock-container{
+/* .clock-container{
   width: 150px;
   height: 120px;
   margin-top: 60px;
-}
+} */
 
-.clock-circle {
+/* .clock-circle {
   top: -30px; 
   width: 150px;
   height: 90px;
-}
+} */
 
-.digital-clock {
+/* .digital-clock {
   font-size: 1.5rem;
   border-radius: 10px;
   margin-top: 50px;
   padding: 3px 20px;
 }
-
+ */
 
 .secuenciaTer2{
   width: 97%;
@@ -1035,19 +1035,19 @@ display: none;
 }
 
 
-.card-clasi {
+/* .card-clasi {
   width: 90%;
 
-}
+} */
 
 .overlap-img{
   width: 30%;
   top: 23%;
 }
 
-.clasifi2{
+/* .clasifi2{
   width: 80%;
-}
+} */
 
 .clasifi{
   padding-right: 20px;
@@ -1330,19 +1330,19 @@ overflow-y: auto;
   overflow-y: auto;
 }
 
-.clock-circle{
+/* .clock-circle{
   display: none;
-}
+} */
 
-.clock-container{
+/* .clock-container{
   height: 80px;
   margin-top: 20px;
-}
+} */
 
-
+/* 
 .digital-clock {
   margin-top: 0px;
-}
+} */
 
 
 
@@ -1367,10 +1367,10 @@ overflow-y: auto;
 
 
 
-.card-clasi {
+/* .card-clasi {
   width: 90%;
 
-}
+} */
 
 .overlap-img{
   width: 30%;
@@ -1431,10 +1431,10 @@ overflow-y: auto;
 }
 
 
-.card-clasi {
+/* .card-clasi {
   width: 90%;
 
-}
+} */
 
 .overlap-img{
   width: 30%;
