--- a/NEURODASH/assets/css/pages/rondas.css
+++ b/NEURODASH/assets/css/pages/rondas.css
@@ -2,10 +2,17 @@
     display: none;
 }
 
+.rond{
+    background-color: #0000006b;
+    width: 90%;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    border-radius: 15px;
+}
+
+
 .container-rondas {
     text-align: center;
-    /* background-color: #3b4046; */
-    /* box-shadow: 0 0 30px rgba(0, 0, 0, 0.6); */
     background-color: #0000009c;
     background-repeat: no-repeat;
     padding: 20px;
@@ -13,42 +20,25 @@
 }
 
 
-
 #ronda {
-    font-size: 26px;
-    margin-bottom: 20px;
+    font-family: 'Jersey';
+    font-size: 46px;
     font-weight: bold;
-    color: #61dafb;
+    color: #fff4f4;
+    text-align: center;
 }
 
 #secuencia {
     display: flex;
     flex-direction: column;
-    margin-top: 20px;
     font-size: 22px;
-    margin: 15px 0;
     padding: 15px;
-    border: 2px solid #61dafb;
+    border: 3px solid #c765e7;
     border-radius: 8px;
-    background-color: #1c2023;
     transition: opacity 0.5s ease;
     max-height: 350px;
     overflow-y: auto;
-}
-
-/* 
-#minutos,
-#segundos {
-    font-size: 48px;
-    margin: 10px;
-    color: #61dafb;
-} */
-
-#mensaje {
-    font-size: 20px;
-    margin-top: 20px;
-    display: none;
-    /* Oculta por defecto */
+    background-color: transparent;
 }
 
 .fadeIn {
@@ -67,9 +57,11 @@
 
 .validarBtnRonda {
     margin-top: 20px;
+    font-family: 'Jersey';
+    font-size: 30px;
     padding: 12px 25px;
     font-size: 18px;
-    background-color: #61dafb;
+    background-color: #d151eb;
     border: none;
     border-radius: 8px;
     cursor: pointer;
@@ -79,17 +71,23 @@
 .validarBtnRonda:hover {
     background-color: #21a1f1;
     transform: scale(1.05);
-    /* Aumentar ligeramente al pasar el cursor */
 }
 
+.list-group-item + .list-group-item {
+    border-top-width: 2px;
+}
 
 .sortable-item {
-    background-color: #61dafb;
+    background-color: #1a1819;
+    border: 2px solid #ffc107;
     border-radius: 5px;
     padding: 10px;
-    margin: 5px;
+    margin: 8px;
     cursor: move;
     text-align: center;
+    color: white;
+    font-family: 'Jersey';
+    font-size: 25px;
     transition: transform 0.2s, background-color 0.3s;
 }
 
@@ -107,16 +105,16 @@
 
 
 /* rondas  */
+
 .clock-container {
     background-color: #2c2c2c;
     border-radius: 20px;
-    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5);
-    box-shadow: 0 0 21px rgb(22, 18, 18);
-
+    border: 3px solid #c765e7;
+    box-shadow: 0 0 21px rgb(90 71 110);
 }
 
 .clock-container {
-    width: 250px;
+    width: 60%;
     height: 350px;
 }
 
@@ -128,7 +126,22 @@
     top: 4.5rem;
 }
 
+.clock-circle{
+    width: 70%;
+    /* width: 250px; */
+    height: 55%;
+    /* height: 200px; */
+  }
+  
 
+#titulo-tiempo{
+    color: white;
+    font-family: 'Jersey';
+    font-size: 50px;
+    font-weight: 500;
+    width: 100%;
+    text-align: center;
+}
 
 .clock-image {
     width: 100%;
@@ -139,16 +152,17 @@
 
 .digital-clock {
     color: white;
-    background-color: #2a2a2a;
+    background-color:  #503750;
+
     border-radius: 10px;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
+    border: 3px solid blueviolet ;
 }
 
 .digital-clock {
     margin-top: 13rem;
-    padding: 10px 20px;
-    font-size: 2rem;
-
+    padding: 5px 10px;
+    font-size: 30px;
 }
 
 
@@ -173,8 +187,9 @@
 
 /* Contenedor principal de los puntajes */
 .puntajes-container {
-    font-family: 'Arial', sans-serif;
-    background-color: #f4f4f9;
+    font-family: 'Jersey';
+    font-size: 25px;
+    background-color: #e791e3;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
@@ -184,8 +199,12 @@
 
 /* Título principal */
 .puntajes-container h2 {
-    color: #333;
-    font-size: 24px;
+
+    font-family: 'Jersey';
+    color: #000000;
+    font-size: 28px;
+    font-weight: 600;
+    letter-spacing: 2px;
     text-align: center;
     margin-bottom: 20px;
 }
@@ -207,6 +226,8 @@
     flex-wrap: wrap;
     justify-content: space-between;
     transition: background-color 0.3s ease;
+    font-family: 'Jersey';
+    font-size: 30px;
 }
 
 .puntaje-item:hover {
@@ -224,8 +245,176 @@
 /* Colores específicos para cada tipo de dato */
 .ronda {
     font-weight: bold;
+    font-size: 23px;
 }
 
 .puntaje {
     font-weight: bold;
+    font-size: 23px;
+
+}
+
+.imgEs3{
+    width: 60px;
+    height: 60px;
+    margin-left: 30px;
+    background-color: #81c7ba;
+    padding: 3px;
+    border-radius: 4px;
+}
+
+
+
+.btnDe{
+    margin-top: 6px;
+    padding: 10px 10px;
+    color: #ffffff; 
+    background-color: #007bff; 
+    text-decoration: none; 
+    font-size: 16px; 
+    font-weight: bold; 
+    border-radius: 5px; 
+    transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+
+.btnDe:hover {
+    background-color: #0056b3; /* Color de fondo al pasar el cursor */
+    transform: scale(1.05); /* Agranda ligeramente el botón */
+}
+
+
+
+.card-clasi {
+    background: linear-gradient(-45deg, #161616 0%, #000000 100%);
+    color: #81818144;
+    padding: 14px;
+    /* gap: 10px; */
+    cursor: pointer;
+    width: 40%;
+    border-radius: 15px;
+    border: 3px solid #c765e7;
+  
+  }
+  
+  .card-clasi:hover{
+    transition: all 0.2s cubic-bezier(0.175, 0.285, 0.82, 1.275);
+    box-shadow: 0px 0px 33px 0px hsl(305, 59%, 51%);
+  }
+
+
+.imgEs4{
+    width: 60px;
+    height: 60px;
+    margin-right: 30px;
+    background-color: #81c7ba;
+    padding: 3px;
+    border-radius: 4px;
+}
+
+
+.clasifi2{
+    display: flex;
+    justify-content: center;
+    color: #000;
+    font-weight: 300;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    border: 3px solid #b21be4;
+      border-radius: 12px;
+  }
+  .clasifi2{
+    margin-top: 40px;
+    background-color: rgb(255, 255, 255);
+    width: 60%;
+  }
+  
+  .clasifi2 span,
+  .clasifi span{
+    font-size: 25px;
+  }
+
+#espera{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+
+.btn-irPodio{
+    background-color: #d151eb;
+    border-radius: 10px;
+    font-family: 'Jersey';
+    font-size: 20px;
+}
+
+
+@media (max-width: 576px) {
+
+    .clock-circle{
+        display: none;
+    }
+
+    .clock-container{
+        width: 90%;
+        height: 100px;
+    }
+
+    .digital-clock {
+        margin-top: 0;
+        padding: 3px 5px;
+        font-size: 20px;
+    }
+
+    #titulo-tiempo{
+        font-size: 30px;
+        font-weight: 500;
+    }
+    
+    .rond{
+        margin: 5px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+       
+    }
+
+    .imgEs3{
+        width: 40px;
+        height: 40px;
+        margin-left: 30px;
+        padding: 3px;
+        
+    }
+    
+    .imgEs4{
+        width: 40px;
+        height: 40px;
+        margin-right: 30px;
+        
+        padding: 3px;
+        
+    }
+    
+    .card-clasi {
+        width: 90%;
+        margin-top: 7px;
+      }
+
+     
+
+      .puntajes-container {
+        font-family: 'Jersey';
+        font-size: 20px;
+        padding: 10px;
+        border-radius: 8px;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+        max-width: 90%;
+        margin-top: 6px;
+    }
+    
+    .clasifi2{
+        width: 80%;
+    }
+      
 }
