--- a/NEURODASH/views/home.html
+++ b/NEURODASH/views/home.html
@@ -80,7 +80,7 @@
             <img class="icon-nav" src="../assets/img/iconos-desarrollo/icono-rango.png" alt="Icono de ligas" />
           </button>
           
-          <div class="dropdown-menu dropdown-menu-end dropdown-menu-lg-start mt-3 bg-dark p-2" style="width: 20rem;">
+          <div class="dropdown-menu dropdown-menu-end justify-content-center dropdown-menu-lg-start mt-3 bg-dark p-2" style="width: 20rem;">
             <div class="aling-item-centerN m-2">
               <h5 class="txtliga">BRONCE</h5>
               <img class="icon-liga" src="../assets/img/iconos-desarrollo/icono-rango.png" alt="Liga" />
