--- a/NEURODASH/views/unirse-sala/salasDispo.html
+++ b/NEURODASH/views/unirse-sala/salasDispo.html
@@ -11,6 +11,11 @@
 
 </head>
 <body class="backgound-unionSala" style="height: 100vh;">
+
+    <a href="../home.html" class="col-4 d-flex justify-content-start ms-4">
+        <img src="../../assets/img/iconos/home.png" alt="flecha-develover" class="devolver-home">
+    </a>
+
     <div class="container-fluid" style="height: 100%;">
         <div id="fondoActiva"></div>
         <!-- <div class="row">
