--- a/NEURODASH/assets/css/pages/home.css
+++ b/NEURODASH/assets/css/pages/home.css
@@ -445,3 +445,10 @@
   height: 100vh;
   background: #000000;
 }
+
+.container-home{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 90vh;
+}
