--- a/NEURODASH/views/home.html
+++ b/NEURODASH/views/home.html
@@ -194,7 +194,7 @@
       </div>
     </nav>
 
-    <div class="container">
+    <div class="container container-home">
       
       <div class="main aling-item-centerN">
         <div class="container">
