--- a/NEURODASH/views/unirse-sala/salasDispo.html
+++ b/NEURODASH/views/unirse-sala/salasDispo.html
@@ -21,9 +21,9 @@
         <!-- <div class="row">
             <div class="col-12 d-flex justify-content-center align-items-center"> -->
                 <div class="col-12 d-flex justify-content-center align-items-center">
-                    <a href="../home.html">
+                    <!-- <a href="../home.html">
                         <img src="../../assets/img/iconos/home.png" alt="" class="iconhomeSal">
-                    </a>
+                    </a> -->
                     <h1 class="fontSalas text-center">SALAS DISPONIBLES</h1>
                 </div>
                 
