--- a/NEURODASH/views/creacion_sala/creaando.html
+++ b/NEURODASH/views/creacion_sala/creaando.html
@@ -12,14 +12,6 @@
 
 </head>
 <body class="backgound-crearSalas ">
-
-    <div class="contenedor-loader" id="loadingScreen">
-        <div class="loading-screen" id="loadingScreen">
-            <div class="loading-circle">Loading...</div>
-            <span></span>
-        </div>
-    </div>
-
     <div class="container-fluid mt-5">
         <div class="col-12 d-flex justify-content-center align-items-center">
             <div class="cardSa">
@@ -61,7 +53,7 @@
                     </div>
                     <div class="col-6 d-flex justify-content-center align-items-center">
                         <div class="cardMdjuego d-flex justify-content-center align-items-center flex-column">
-                            <img src="../../assets/img/avatars/avatar1.jpg" alt="" class="ImgGran">
+                            <img src="" alt="" class="ImgGran">
                             <a href="#" class="create-room-btn mt-2 text-center disabled-input" disabled>Crear sala</a>
                             <!-- crearsala2.html -->
                             <!-- <button class="create-room-btn mt-2">Crear Sala</button> -->
