--- a/NEURODASH/views/topi-memori/topiMemori.html
+++ b/NEURODASH/views/topi-memori/topiMemori.html
@@ -96,6 +96,7 @@
 
   <script src="../../lib/bootstrap/js/bootstrap.js"></script>
   <script src="../../assets/js/entrenamiento/animacion1.js"></script>
+  <script type="module" src="../../assets/js/main.js"></script>
 </body>
 </html>
 
