--- a/NEURODASH/views/home.html
+++ b/NEURODASH/views/home.html
@@ -193,38 +193,40 @@
         
       </div>
     </nav>
-    
-    <div class="container container-home">
-      
-      <div class="main aling-item-centerN">
-        <div class="container">
-          <div class="row">
-            <!-- Logo de NUZIT -->
-            <div class="col-md-12 aling-item-centerN">
-              <div class="img-logo">
-                <img src="../assets/img/iconos-principales/dash.png" alt="Logo NUZIT" class="img-fluid" />
-              </div>
-            </div>
-          </div>
-          
-          <!-- Vista para PC -->
-          <!-- Se agrega mediante JavaScript -->
-          <!-- <div id="card-container" class="row d-none d-md-flex"></div> -->
-          
-          <!-- Vista para móvil -->
-          <div class="row ">
-            <div class="col-12">
-              <!-- Slider principal -->
-              <div class="swiper swiper-home p-0 m-0" >
-                <div class="swiper-wrapper" id="swiper-wrapper">
-                  <!-- Se agrega mediante JavaScript -->
-                </div>
-          
+    <div class="container-home">
 
+      <div class="container">
+        
+        <div class="main aling-item-centerN">
+          <div class="container">
+            <div class="row">
+              <!-- Logo de NUZIT -->
+              <div class="col-md-12 aling-item-centerN">
+                <div class="img-logo">
+                  <img src="../assets/img/iconos-principales/dash.png" alt="Logo NUZIT" class="img-fluid" />
+                </div>
               </div>
             </div>
+            
+            <!-- Vista para PC -->
+            <!-- Se agrega mediante JavaScript -->
+            <!-- <div id="card-container" class="row d-none d-md-flex"></div> -->
+            
+            <!-- Vista para móvil -->
+            <div class="row ">
+              <div class="col-12">
+                <!-- Slider principal -->
+                <div class="swiper swiper-home p-0 m-0" >
+                  <div class="swiper-wrapper" id="swiper-wrapper">
+                    <!-- Se agrega mediante JavaScript -->
+                  </div>
+            
+  
+                </div>
+              </div>
+            </div>
+            
           </div>
-          
         </div>
       </div>
     </div>
