--- a/NEURODASH/views/creacion_sala/creaando.html
+++ b/NEURODASH/views/creacion_sala/creaando.html
@@ -87,7 +87,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 d-flex justify-content-center align-items-center">radios_dificultad
+                <div class="col-12 d-flex justify-content-center align-items-center">
                     <div class="col-6 d-flex justify-content-center align-items-center ">
                         <div class="card-group2">
                             <input type="radio" id="facil" name="dificultad" value="facil">
