--- a/NEURODASH/views/entrenamiento/rondas.html
+++ b/NEURODASH/views/entrenamiento/rondas.html
@@ -15,9 +15,9 @@
     <link rel="stylesheet" href="../../assets/css/main.css">
 </head>
 
-<body class="backgound-unionSala" style="height: 100vh;">
+<body class="backgound-unionSala">
 
-    <div class="min-vh-100 aling-item-centerN" style="height: 100%;">
+    <div class="min-vh-100 aling-item-centerN">
     
         <div class="rond">
             <div class="row d-flex justify-content-between align-items-center">
