--- a/NEURODASH/assets/css/pages/rondas.css
+++ b/NEURODASH/assets/css/pages/rondas.css
@@ -2,7 +2,7 @@
     display: none;
 }
 
-.rond{
+.rond {
     background-color: #0000006b;
     width: 90%;
     padding-top: 30px;
@@ -73,7 +73,7 @@
     transform: scale(1.05);
 }
 
-.list-group-item + .list-group-item {
+.list-group-item+.list-group-item {
     border-top-width: 2px;
 }
 
@@ -126,15 +126,15 @@
     top: 4.5rem;
 }
 
-.clock-circle{
+.clock-circle {
     width: 70%;
     /* width: 250px; */
     height: 55%;
     /* height: 200px; */
-  }
-  
+}
 
-#titulo-tiempo{
+
+#titulo-tiempo {
     color: white;
     font-family: 'Jersey';
     font-size: 50px;
@@ -152,11 +152,11 @@
 
 .digital-clock {
     color: white;
-    background-color:  #503750;
+    background-color: #503750;
 
     border-radius: 10px;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
-    border: 3px solid blueviolet ;
+    border: 3px solid blueviolet;
 }
 
 .digital-clock {
@@ -254,7 +254,7 @@
 
 }
 
-.imgEs3{
+.imgEs3 {
     width: 60px;
     height: 60px;
     margin-left: 30px;
@@ -265,22 +265,24 @@
 
 
 
-.btnDe{
+.btnDe {
     margin-top: 6px;
     padding: 10px 10px;
-    color: #ffffff; 
-    background-color: #007bff; 
-    text-decoration: none; 
-    font-size: 16px; 
-    font-weight: bold; 
-    border-radius: 5px; 
+    color: #ffffff;
+    background-color: #007bff;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: bold;
+    border-radius: 5px;
     transition: background-color 0.3s ease, transform 0.2s ease;
 }
 
 
 .btnDe:hover {
-    background-color: #0056b3; /* Color de fondo al pasar el cursor */
-    transform: scale(1.05); /* Agranda ligeramente el botón */
+    background-color: #0056b3;
+    /* Color de fondo al pasar el cursor */
+    transform: scale(1.05);
+    /* Agranda ligeramente el botón */
 }
 
 
@@ -294,16 +296,16 @@
     width: 40%;
     border-radius: 15px;
     border: 3px solid #c765e7;
-  
-  }
-  
-  .card-clasi:hover{
+
+}
+
+.card-clasi:hover {
     transition: all 0.2s cubic-bezier(0.175, 0.285, 0.82, 1.275);
     box-shadow: 0px 0px 33px 0px hsl(305, 59%, 51%);
-  }
+}
 
 
-.imgEs4{
+.imgEs4 {
     width: 60px;
     height: 60px;
     margin-right: 30px;
@@ -313,27 +315,28 @@
 }
 
 
-.clasifi2{
+.clasifi2 {
     display: flex;
     justify-content: center;
     color: #000;
     font-weight: 300;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     border: 3px solid #b21be4;
-      border-radius: 12px;
-  }
-  .clasifi2{
+    border-radius: 12px;
+}
+
+.clasifi2 {
     margin-top: 40px;
     background-color: rgb(255, 255, 255);
     width: 60%;
-  }
-  
-  .clasifi2 span,
-  .clasifi span{
-    font-size: 25px;
-  }
+}
 
-#espera{
+.clasifi2 span,
+.clasifi span {
+    font-size: 25px;
+}
+
+#espera {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -342,7 +345,7 @@
 }
 
 
-.btn-irPodio{
+.btn-irPodio {
     background-color: #d151eb;
     border-radius: 10px;
     font-family: 'Jersey';
@@ -352,11 +355,11 @@
 
 @media (max-width: 576px) {
 
-    .clock-circle{
+    .clock-circle {
         display: none;
     }
 
-    .clock-container{
+    .clock-container {
         width: 90%;
         height: 100px;
     }
@@ -367,43 +370,43 @@
         font-size: 20px;
     }
 
-    #titulo-tiempo{
+    #titulo-tiempo {
         font-size: 30px;
         font-weight: 500;
     }
-    
-    .rond{
+
+    .rond {
         margin: 5px;
         padding-top: 20px;
         padding-bottom: 20px;
-       
+
     }
 
-    .imgEs3{
+    .imgEs3 {
         width: 40px;
         height: 40px;
         margin-left: 30px;
         padding: 3px;
-        
+
     }
-    
-    .imgEs4{
+
+    .imgEs4 {
         width: 40px;
         height: 40px;
         margin-right: 30px;
-        
+
         padding: 3px;
-        
+
     }
-    
+
     .card-clasi {
         width: 90%;
         margin-top: 7px;
-      }
+    }
 
-     
 
-      .puntajes-container {
+
+    .puntajes-container {
         font-family: 'Jersey';
         font-size: 20px;
         padding: 10px;
@@ -412,9 +415,9 @@
         max-width: 90%;
         margin-top: 6px;
     }
-    
-    .clasifi2{
+
+    .clasifi2 {
         width: 80%;
     }
-      
+
 }
