--- a/NEURODASH/views/creacion_sala/creaando.html
+++ b/NEURODASH/views/creacion_sala/creaando.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="../../lib/fontawesome/css/all.css">
 
 </head>
-<body class="backgound-crearSalas ">
-    <div class="container-fluid mt-5">
+<body class="backgound-crearSalas d-flex justify-content-center align-items-center">
+    <div class="container-fluid">
         <div class="col-12 d-flex justify-content-center align-items-center">
             <form action="" class="cardSa">
                 <div class="col-12 d-flex justify-content-center align-items-center">
