--- a/NEURODASH/views/topi-memori/memorTopy.html
+++ b/NEURODASH/views/topi-memori/memorTopy.html
@@ -10,7 +10,7 @@
     
 </head>
 <body class="backgound-topi2" style="height: 100vh;">
-    <div class="container-fluid 100vh">
+    <div class="container tpMe 100vh">
         <div class="row">
             <div class="col-12 d-flex justify-content-center align-items-center rect">
                 <div class="col-6 d-flex justify-content-center align-items-center">
