--- a/NEURODASH/views/topi-memori/topiMemori.html
+++ b/NEURODASH/views/topi-memori/topiMemori.html
@@ -14,15 +14,18 @@
   <div class="container estilo tpMe">
 
     <div class="row">
-      <div class="col-6 d-flex justify-content-start">
-          <a href="" title="Configuraciones" class="hover-icons">
-            <img src="../../assets/img/iconos/config.png" alt="botón configuración" class="configuraciones2 mt-2">
-          </a>
-
+      <div class="col-6 d-flex justify-content-start align-items-center">
+        <a href="">
+          <img src="../../assets/img/iconos/musica-config.png" alt="" class="configuraciones">
+        </a>
+        <a href="">
+            <img src="../../assets/img/iconos/sonido-config.png" alt="" class="configuraciones">
+        </a>
+      
       </div>
       <div class="col-6 d-flex justify-content-end">
-            <a href="" title="Configuraciones" class="hover-icons" data-bs-toggle="modal" data-bs-target="#exampleModal">
-              <img src="../../assets/img/iconos-desarrollo/infoTopi.gif" alt="botón configuración" class="configuraciones2">
+            <a href="#modalTopy" data-bs-toggle="modal" data-bs-target="#modalTopy">
+              <img src="../../assets/img/iconos-desarrollo/infoTopi.gif" alt="botón información" class="configuraciones2">
             </a>
             <a href="../home.html" class="hover-icons">
               <img src="../../assets/img/iconos/home.png" alt="botón home" class="configuraciones2">
@@ -46,26 +49,19 @@
     </div>
       
   
-  <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content custom-elephant-modal">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5 text-center" id="exampleModalLabel">TOPI MEMORY</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+  <!-- Modal -->  
+  <div class="modal fade" id="modalTopy" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content container-innerTopy">
+        <div class="contentTopy">
+          <p>
+            En este juego, los elefantes aparecen y desaparecen en la pantalla, y tu tarea es recordar correctamente las imágenes de los elefantes buenos,
+            mientras evitas los que no son correctos. Cada vez que selecciones correctamente un elefante,
+            ganarás puntos, pero cuidado: si eliges un elefante incorrecto, perderás puntos.
+          </p>
         </div>
-        <div class="modal-body">
-             En este juego, los elefantes aparecen y desaparecen en la pantalla, y tu tarea es recordar correctamente las imágenes de los elefantes buenos,
-            mientras evitas los que no son correctos.
-            <br>
-            <br>
-              Cada vez que selecciones correctamente un elefante,
-              ganarás puntos, pero cuidado: si eliges un elefante incorrecto, perderás puntos.
-              <br>
-              <br>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Close</button>
+        <div class="buttonsTopy">
+          <button type="button" class="confirmTopy" data-bs-dismiss="modal">Aceptar</button>
         </div>
       </div>
     </div>
