--- a/NEURODASH/views/entrenamiento/rondas.html
+++ b/NEURODASH/views/entrenamiento/rondas.html
@@ -155,10 +155,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row p-0 mt-1">
                         <div class="col-12 d-flex justify-content-end align-items-center">
-                            <a href="../home.html" class="btnDe">REGRESAR
-                            </a>
+                            <a href="../home.html" class="btnDe">REGRESAR</a>
 
                         </div>
                     </div>
