--- a/NEURODASH/views/entrenamiento/tematicaEntrenamiento.html
+++ b/NEURODASH/views/entrenamiento/tematicaEntrenamiento.html
@@ -13,7 +13,7 @@
 <body class="backgound-uno d-flex justify-content-center align-items-center" style="height: 100vh;">
 
   <div class="container-fluid justify-content-center" style="height: 100%;">
-    <div class="row mt-5">
+    <div class="row">
       <div class="col-12 d-flex justify-content-start">
         <a href="entrenamiento.html">
           <img src="../../assets/img/iconos/devolver.png" alt="boton confi" class="ico-devolver">
@@ -36,7 +36,6 @@
               <div class="card categoria" style="width: 430px; background-color: #7878eeb6; border-radius: 15px;"></div>
             </div>
           </div> 
-        </div>
       </div>
     </div>
 
