--- a/NEURODASH/views/juego/salaEspera.html
+++ b/NEURODASH/views/juego/salaEspera.html
@@ -58,7 +58,7 @@
         </div>
         <div class="modal-body bg-dark body-modal-sala">
           <div class="mb-1 info">
-            <div class="avatar-user">
+            <div class="avatar-ligaSala">
               <img class="icon-liga" src="../../assets/img/iconos-desarrollo/icono-rango.png" alt="Liga" />
             </div>
             <label class="text-white col-form-label name-user-sala font-4"></label>
