--- a/NEURODASH/views/topi-memori/topiMemori.html
+++ b/NEURODASH/views/topi-memori/topiMemori.html
@@ -33,10 +33,11 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-12 d-flex justify-content-center align-items-center" style="position: relative;">
+      <div class="col-12 d-flex justify-content-center align-items-center cardDifiTopy" style="position: relative;">
           <img src="../../assets/img/iconos-principales/topLogo.png" alt="logo" class="lgoTop">
+          
            
-            <a href="memorTopy.html" class="btn-facil">
+            <!-- <a href="memorTopy.html" class="btn-facil">
               FACIL
             </a>
             <a href="memorTopy.html" class="btn-medio">
@@ -44,7 +45,7 @@
             </a>
             <a href="memorTopy.html" class="btn-dificil">
              DIFICIL
-            </a>
+            </a> -->
       </div>
     </div>
       
@@ -68,8 +69,10 @@
   </div>
 
   <script src="../../lib/bootstrap/js/bootstrap.js"></script>
+  <script src="../../controller/topy/dificultad.js"></script>
   <script src="../../assets/js/entrenamiento/animacion1.js"></script>
-  <script type="module" src="../../assets/js/main.js"></script>
+
+  <!-- <script type="module" src="../../assets/js/main.js"></script> -->
 </body>
 </html>
 
