--- a/NEURODASH/assets/css/pages/salaEspera.css
+++ b/NEURODASH/assets/css/pages/salaEspera.css
@@ -151,7 +151,8 @@
     color: #fff !important;
 }
 
-.avatar-user{
+
+.avatar-ligaSala{
     width: 100px;
     height: 100px;
     border: 5px solid #b701ffbe;
