--- a/NEURODASH/views/home.html
+++ b/NEURODASH/views/home.html
@@ -28,7 +28,7 @@
         <!-- Información de usuario -->
         <div class="dropdown usuario mx-lg-5">
           <button type="button" class="btn fondo-btn btn-nav" data-bs-toggle="dropdown" aria-expanded="false" aria-label="Menú de usuario">
-            <img class="icon-nav avatar-user" src="../assets/img/iconos-desarrollo/icono-user.svg" alt="Icono de usuario" />
+            <img class="avatar-user" src="../assets/img/iconos-desarrollo/icono-user.svg" alt="Icono de usuario" />
             <span class="m-2 name_user">---</span>
           </button>
           <ul class="dropdown-menu mt-3 bg-dark menu-user">
@@ -45,7 +45,7 @@
             </li>
             <li class="m-2">
               <div class="info">
-                <img class="icon-liga avatar-user" src="../assets/img/iconos-desarrollo/icono-rango.png" alt="Liga" />
+                <img class="avatar-user infoper" src="../assets/img/iconos-desarrollo/icono-rango.png" alt="Liga" />
                 <label class="text-white col-form-label name_user"></label>
               </div>
             </li>
@@ -77,7 +77,7 @@
         <div class="dropdown ligas">
           <button type="button" class="btn fondo-btn btn-nav" data-bs-toggle="dropdown" aria-expanded="false" aria-label="Menú de ligas">
             <span>Ligas:</span>
-            <img class="icon-nav" src="../assets/img/iconos-desarrollo/icono-rango.png" alt="Icono de ligas" />
+            <img class="icon-navLigas" src="../assets/img/iconos-desarrollo/icono-rango.png" alt="Icono de ligas" />
           </button>
           
           <div class="dropdown-menu dropdown-menu-end justify-content-center dropdown-menu-lg-start mt-3 bg-dark p-2" style="width: 20rem;">
