--- a/NEURODASH/views/topi-memori/memorTopy.html
+++ b/NEURODASH/views/topi-memori/memorTopy.html
@@ -53,8 +53,8 @@
 
     </div>
     
-    <!-- <script src="topi.js"></script> -->
-    <script type="module" src="../../assets/js/main.js"></script>
+    <script src="../../assets/js/page/topi.js"></script>
+    <!-- <script type="module" src="../../assets/js/main.js"></script> -->
     <script src="../../lib/bootstrap/js/bootstrap.js"></script>
     <script src="../../lib/bootstrap/js/bootstrap.bundle.js"></script>
 </body>
